--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.12.2",
+    "framer-motion": "^12.23.22",
+    "react": "^18.x",
+    "react-dom": "^18.x",
+    "react-router-dom": "^7.9.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "react-scripts start",        
+    "start": "react-scripts start",      
+    "build": "react-scripts build",      
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
